# django-deploy

./: .env  .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py
