[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Lef <116380867+Stremilov@users.noreply.github.com>"]


[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.0"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
django-debug-toolbar = "^4.2.0"
pillow = "^10.0.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
